# mko_birth_reminder_bot

./: .gitignore  MANIFEST.in  README.md  README_UBUNTU.md  UBUNTU_SERVICE.md  mko_birth_reminder_bot.service  pyproject.toml  requirements.txt  requiremets.txt  requirments.txt
mko_birth_reminder_bot/: __main__.py  db_init.py  main.py  operator.py  quotes.py  reminder.py  reminder_state.yaml  some_helpers.py  tg_worker.py  tgbot.py
mko_birth_reminder_bot/core/: __init__.py  config.py  config_reader.py  config_utils.py  config_worker.py  csv_handler.py  csv_woker.py  db_handler.py  db_worker.py  errors.py  logger.py  tg_worker.py  utils.py
mko_birth_reminder_bot/messages/: MTwain_help.md  MTwain_help_import.md  help.md  help_import.md
mko_birth_reminder_bot/settings/: config.yaml  config_ru.yaml  default_secrets.yaml  log_config.yaml  tg_buttons.yaml
mko_birth_reminder_bot/settings/default/: config.yaml  log_config.yaml
mko_birth_reminder_bot/tests/: conftest.py  test_data.py  tests.py
tests/: __init__.py  conftest.py  test_data.py  tests.py
