[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[project]
name = "mko_birth_reminder_bot"
version = "0.0.1"
authors = [
    { name = "mko", email = "manicko@yandex.ru" },
]

description = "Telegram birth reminder bot built on Telethon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.11",
    "beautifulsoup4>=4.13.0",
    "click>=8.1.8",
    "pandas>=2.2.3",
    "platformdirs>=4.3.6",
    "prettytable>=3.14.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.1",
    "PyYAML>=6.0.2",
    "Telethon>=1.38.1",
    "APScheduler>=3.11.0",
    "pytest>=8.3.4",
    "Faker>=35.2.0",
    "freezegun>=1.5.1",
    "pytest-asyncio>=0.25.3",
]

classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/manicko/mko_birth_reminder_bot"
Repository = "https://github.com/manicko/mko_birth_reminder_bot"
Issues = "https://github.com/manicko/mko_birth_reminder_bot/issues"

[tool.setuptools]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux", "Windows"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["mko_birth_reminder_bot*", "mko_birth_reminder_bot.settings"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests/.pytest_cache*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
#-ra: This combines two options: -r (report summary at the end) and
# -a (all except passed). It means that Pytest will display a summary report
# at the end of the test run and will show details for failed, skipped, and failed
# (expected to fail) tests.
# -q: This stands for "quiet" mode.
# It suppresses most of the output, making the test run less verbose.

console_output_style = "classic"
testpaths = ["tests"]