[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[project]
name = "mko_birth_reminder_bot"
version = "0.0.6"
authors = [
    { name = "mko", email = "manicko@yandex.ru" },
]

description = "Telegram birth reminder bot built on Telethon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "beautifulsoup4>=4.11",
    "click>=8",
    "pandas>=2.2",
    "platformdirs>=4",
    "prettytable>=3",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dateutil>=2",
    "pytz>=2025.1",
    "PyYAML>=6",
    "Telethon>=1",
    "APScheduler>=3"
]

classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/manicko/mko_birth_reminder_bot"
Repository = "https://github.com/manicko/mko_birth_reminder_bot"
Issues = "https://github.com/manicko/mko_birth_reminder_bot/issues"

[tool.setuptools]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux", "Windows"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["mko_birth_reminder_bot*", "mko_birth_reminder_bot.settings", "mko_birth_reminder_bot.messages"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests/.pytest_cache*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
#-ra: This combines two options: -r (report summary at the end) and
# -a (all except passed). It means that Pytest will display a summary report
# at the end of the test run and will show details for failed, skipped, and failed
# (expected to fail) tests.
# -q: This stands for "quiet" mode.
# It suppresses most of the output, making the test run less verbose.

console_output_style = "classic"
asyncio_default_fixture_loop_scope = "module"